revised datetime and added Q1

--- a/ind5003_enron_nlp.ipynb
+++ b/ind5003_enron_nlp.ipynb
@@ -33,10 +33,8 @@
     "\n",
     "We have an intention to split our analysis into 3 defined timeframes:\n",
     "1. Pre-Crisis (June 1999 - Aug 2001)\n",
-    "2. During Crisis ( Sep 2000 - Oct 2001 )\n",
-    "3. Post Crisis ( Nov 2001 - June 2002)\n",
-    "\n",
-    "*** [GUYS WE NEED TO THINK OF THE DATES TO SPLIT THE TIMEFRAMES INTO. I WAS THINKING WE CAN FOLLOW JUST THE TIMELINE. THIS PART DEFINITELY HAVE TO STATE ASSUMPTIONS] ***\n",
+    "2. During Crisis (Sep 2000 - Oct 2001 )\n",
+    "3. Post Crisis (Nov 2001 - June 2002)\n",
     "\n",
     "These research questions would be answered using a variety of NLP and Unsupervised Learning Techniques. \n",
     "\n",
@@ -816,7 +814,7 @@
    ],
    "source": [
     "# Remove duplicate emails based on the 'Body' column, keeping only the first occurrence\n",
-    "enron_cleaned_emails_body_unique = enron_cleaned_emails.drop_duplicates(subset=['Body', 'From', 'To', 'Date', 'Subject'], keep='first')\n",
+    "enron_cleaned_emails_body_unique = enron_cleaned_emails.drop_duplicates(keep='first')\n",
     "# Describe the DataFrame after removing duplicates\n",
     "enron_cleaned_emails_body_unique.describe()"
    ]
@@ -876,7 +874,7 @@
    ],
    "source": [
     "# Convert the Date column to a pandas datetime object in the deduplicated dataframe\n",
-    "enron_cleaned_emails_body_unique['Date'] = pd.to_datetime(enron_cleaned_emails_body_unique['Date'], errors='coerce', utc=False)\n",
+    "enron_cleaned_emails_body_unique['Date'] = pd.to_datetime(enron_cleaned_emails_body_unique['Date'], errors='coerce', utc=True)\n",
     "\n",
     "# Print the types of each column to ensure that the Date column is now a datetime object\n",
     "print(enron_cleaned_emails_body_unique.dtypes)"
@@ -941,12 +939,6 @@
     }
    ],
    "source": [
-    "# Convert the Date column to a pandas datetime object in the deduplicated dataframe\n",
-    "enron_cleaned_emails_body_unique['Date'] = pd.to_datetime(enron_cleaned_emails_body_unique['Date'], errors='coerce', utc=False)\n",
-    "\n",
-    "# Print the types of each column to ensure that the Date column is now a datetime object\n",
-    "print(enron_cleaned_emails_body_unique.dtypes)\n",
-    "\n",
     "# Extract the 'Year' from the 'Date' column\n",
     "enron_cleaned_emails_body_unique['Year'] = enron_cleaned_emails_body_unique['Date'].dt.year\n",
     "\n",
@@ -1276,6 +1268,13 @@
     "\n",
     "# Display the first few rows of the DataFrame to inspect the cleaned and lemmatized results\n",
     "enron_cleaned_emails_body_unique[['Body', 'Cleaned_Body']].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q1 Topic Identification Across Time"
    ]
   },
   {
