Added comments and code for Q1

--- a/ind5003_enron_nlp.ipynb
+++ b/ind5003_enron_nlp.ipynb
@@ -1274,7 +1274,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q1 Topic Identification Across Time"
+    "# Q1 Topic Identification Across Time\n",
+    "\n",
+    "Use LDA to find the most common topics across time under each of the pre-processed corpus under each period (pre, during, post crisis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import tokenized corpus from local folder\n"
    ]
   },
   {
@@ -1434,7 +1445,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ind5003",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
