--- a/ind5003_enron_nlp.ipynb
+++ b/ind5003_enron_nlp.ipynb
@@ -1430,6 +1430,18 @@
     "enron_post_crisis = enron_cleaned_emails_body_unique[(enron_cleaned_emails_body_unique['Date'] >= '2001-11-01') & \n",
     "                                                     (enron_cleaned_emails_body_unique['Date'] <= '2002-06-30')]\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q2 ANALYSIS TESTING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
